Fix vertical-align is set to bottom error

--- a/CSS_advanced/styles/30-style.css
+++ b/CSS_advanced/styles/30-style.css
@@ -195,8 +195,7 @@ a:active {
     height: 30rem;
     width: 100%;
     object-fit: cover;
-    position: absolute;
-    bottom: 0;
+    vertical-align: bottom;
 }
 
 .card-work .card-inner {
